<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <ImageView
        android:id="@+id/login_page_logo"
        android:layout_width="323dp"
        android:layout_height="239dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/login_page_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/log_in_account"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/login_page_email_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_logo"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/login_page_redirect_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tap_sign_up"
        android:textColor="@color/redirect_to_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/login_page_login_button"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/login_page_password_button"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginBottom="292dp"
        android:background="@drawable/rounded_button_login"
        android:hint="@string/password"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"

        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_page_login_button"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/rounded_button_login_to_main"
        android:paddingLeft="100dp"
        android:text="@string/login"
        android:textColor="@android:color/white"

        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_password_button"
        app:layout_constraintVertical_bias="0.621" />

    <CheckBox
        android:id="@+id/login_page_remember_device_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/remember_this_device"
        app:layout_constraintBottom_toTopOf="@+id/login_page_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_password_button" />

    <TextView
        android:id="@+id/login_page_forgot_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="30dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/login_page_remember_device_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_password_button"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:text="@string/done_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page_login_button" />

    <EditText
        android:id="@+id/login_page_email_button"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button_login"
        android:padding="10dp"
        android:text="@string/email"

        android:textColor="@android:color/white"
        android:textSize="19dp"
        app:layout_constraintBottom_toTopOf="@+id/login_page_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>