<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <ImageView
            android:id="@+id/login_page_logo"
            android:layout_width="323dp"
            android:layout_height="239dp"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/signup_client_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_client"
            android:text="@string/client"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.471"
            android:drawableLeft="@drawable/client_40x40"
            android:drawablePadding="-49dp"/>

        <Button
            android:id="@+id/signup_courier_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_courier"
            android:gravity="center"
            android:text="@string/courier"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.581"
            android:drawableLeft="@drawable/courier_40x40"
            android:drawablePadding="-39dp"/>


        <Button
            android:id="@+id/signup_washer_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:background="@drawable/rounded_button_washer"
            android:text="@string/laundry_shop"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_courier_button"
            app:layout_constraintVertical_bias="0.031"
            android:drawableLeft="@drawable/laundryshop_40x40"
            android:drawablePadding="-10dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.297"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.789" />

        <TextView
            android:id="@+id/log_in_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_here"
            android:textColor="#5C8D5D"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.789" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="318dp"
            android:layout_height="69dp"
            android:text="@string/sign_up"
            android:textSize="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.354"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.317" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginBottom="39dp"
            android:gravity="center"
            android:text="@string/i_am_a"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.404" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>